--- a/KUSAapp/static/css/style.css
+++ b/KUSAapp/static/css/style.css
@@ -123,7 +123,8 @@ p {
 .jcarousel {
     position: relative;
     overflow: hidden;
-    width:	  80%;
+    width:	  900px;
+    height:   520px;
     margin:	  0 auto;
     border:   5px solid grey;
 }
@@ -139,26 +140,27 @@ p {
 .jcarousel li {
     /* Required only for block elements like <li>'s */
     float: left;
+    width:890px;
 }
 .jcarousel img {
-	width:950px;
-	height:470px;
+	width:100%;
+	height:100%;
 }
 .jcarousel p {
 	position: absolute;
 	color:white;
 	opacity:0.8;
-	font-size: 140px;
-	top:280px;
+	font-size: 100px;
+	top:350px;
 }
 #explore {
-	left:460px;
+	left:540px;
 }
 #learn {
-	left:1540px;
+	left:1510px;
 }
-#network {
-	left:2300px;
+#mingle {
+	left:2350px;
 }
 .jcarousel img:hover {
 
@@ -195,8 +197,8 @@ p {
 
 #about {
 	background-color: #B0CFE3;
-	height: 		  400px;
-	border-bottom: 	  1px solid #B0CFE3;
+	height: 		  450px;
+	/*	*/
 }
 #about h1 {
 	text-align:  left;
@@ -204,12 +206,16 @@ p {
 }
 #about p {
 	text-align: left;
-	font-size: 24px;
+	font-size: 20px;
 }
-#about .about-sub-section {
-	margin:0 auto;
-	margin-top:30px;
-	width:100%;
+#about-list {
+	width:20%;
+	display:inline-block;
+	float:left;
+}
+#about-content {
+	width:67%;
+	display:inline-block;
 }
 #about .about-sub-title {
 	margin:20px;
@@ -290,7 +296,8 @@ p {
 }
 #photos .photos-sub-title img {
 	width:150px; 
-	height:150px; 
+	height:150px;
+	border: 5px solid #C5C5C5;
 }
 #photos a {
 	text-decoration: none;
@@ -305,7 +312,7 @@ p {
 }
 
 #calendar {
-	background-color:#00FFFF;
+	background-color:#BAD0EB;
 	height: 800px;
 	border-top: 1px solid #D9E0FF;
 	margin: 0 auto;	
@@ -318,10 +325,14 @@ p {
 #calendar p {
 	text-align: left;
 }
+#calendar iframe {
+	width:80%;
+	height:80%;
+}
 
 
 #contact {
-	background-color:#FFFFFF;
+	/*background-color:#FFFFFF;*/
 	height: 550px;
 	border-top: 1px solid #D9E0FF;
 	margin: 0 auto;	
