changed background colors for each section

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" />                
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.fancybox.css" />
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}galleria/themes/classic/galleria.classic.css">
-        <link href="http://fonts.googleapis.com/css?family=Lato:300|Fjalla+One" rel="stylesheet" type="text/css" /> 
+        <link href="http://fonts.googleapis.com/css?family=Lato:300|Oswald" rel="stylesheet" type="text/css" /> 
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/jcarousel.js"></script>
@@ -21,12 +21,12 @@
 			<!-- top bar/logo/nav -->
 			<div id="header">
 				<!--top bar with description and email-->
-				<!-- <div id="topbar">
+				<div id="topbar">
 					<div class="narrower-container">
-						<div id="desc"><p>description? overly long descripty description</p></div>
-						<div id="email"><p>kusa@duke.edu</p></div>
+						<!-- <div id="desc"><p>description? overly long descripty description</p></div>
+						<div id="email"><p>kusa@duke.edu</p></div> -->
 					</div>
-				</div> -->				
+				</div>				
 				<!--space for kusa logo-->
 				<div id="logo">
 					<div class="narrower-container"> 
@@ -34,14 +34,14 @@
 					</div>
 				</div>
 				<!--nav bar for different pages-->
-				<div id="nav"> 
+				<div id="navbar"> 
 					<div class="narrower-container">
 						<ul id="nav-list">
-							<li><a href="#about">about us</a></li>
-							<li><a href="#exec">exec board</a></li>
-							<li><a href="#photos">photos</a></li>
-							<li><a href="#calendar">calendar</a></li>
-							<li><a href="#contact">contact</a></li>
+							<li><a href="#about">About Us</a></li>
+							<li><a href="#exec">Execs</a></li>
+							<li><a href="#photos">Photos</a></li>
+							<li><a href="#calendar">Calendar</a></li>
+							<li><a href="#contact">Contact</a></li>
 						</ul>
 					</div>
 				</div>
@@ -61,6 +61,7 @@
 					<div id="footer-desc">
 						Copyright Duke Korean Undergraduate Student Association 2014
 					</div>
+					<div id="toTop"><button>top</button></div>
 				</div>
 			</div>
 		</div>
