--- a/KUSAapp/static/css/style.css
+++ b/KUSAapp/static/css/style.css
@@ -10,7 +10,7 @@ body {
 
 /* Text formatting */
 h1 {
-	font-family: 'Fjalla One', sans-serif;
+	font-family: 'Oswald', sans-serif;
 	margin-bottom: 20px;
 	margin-top: 0px;
 }
@@ -41,16 +41,22 @@ p {
 	height:	100%;
 	margin: 0 auto;
 }
+.section-container {
+	padding-top:10px;
+}
+.section-content {
+	padding-top:10px;	
+}
 
 /* Header */
 #header {
 	height:300px;
-	background-image:url("../images/halftone.png");
+	/*background-image:url("../images/halftone.png");*/
 }
 
 #topbar {
-	height:			  50px;	
-	background-color: grey;
+	height:			  40px;	
+	background-image: url("../images/grey_wash_wall.png");
 }
 #topbar p {
 	padding-top: 15px;
@@ -63,40 +69,44 @@ p {
 }
 
 #logo {
-	height:			80%;
+	height:			70%;
 	padding-top:	20px;
 	padding-bottom: 20px;
 }
 #logo img {
 	height:  100%;
-	width: 	 500px;
+	width: 	 480px;
 	display: block;
 	margin:  0 auto;
 }
-#nav {
-	height:		      60px;
+#navbar {
+	height:		      50px;
 	width:			  100%;
-	border-top:       1px solid grey;
-	border-bottom:    1px solid grey;
-	background-color: #F2F2F2;
+	border-top:       1px solid #EAEAEA;
+	/*border-bottom:    1px solid #EAEAEA;*/
+	background-image:url("../images/greyzz.png");
 	z-index: 		  10;
 }
 #nav-list {
 	width:		100%;
 	height:		100%;
-	margin-top:	12px;
+	margin-top:	8px;
 	padding:	0;
 	text-align: center;
+	font-weight:bold;
 }
 #nav-list li {
 	display:   inline-block;
 	width: 	   150px;
-	font-size: 23px;
-	margin:	   0 auto;
+	font-size: 21px;
+	margin: 0 10px;
 }
 #nav-list a {
 	text-decoration: none;
-	color: 			 grey;
+	color:#6D6D6D;
+}
+#nav-list a:hover {
+	color:#A7A7A7;
 }
 .fixed {
 	position: fixed;
@@ -112,21 +122,23 @@ p {
 
 /* carousel */
 #carousel {
-	background-color: lightgrey;
-	height:			  600px;
+	background-image:url("../images/nasty_fabric.png");
+	height:			  560px;
 }
 #carousel-and-nav {
-	height:  480px;
+	height:  500px;
 	width:	 100%;	
-	padding: 40px 48px 10px 48px;
+	/*padding: 40px 48px 10px 48px;*/
 }
 .jcarousel {
     position: relative;
     overflow: hidden;
-    width:	  900px;
-    height:   520px;
+    /*width:	  750px;
+    height:   420px;*/
+    width:1296px;
+    height:560px;
     margin:	  0 auto;
-    border:   5px solid grey;
+    /*border:   5px solid grey;*/
 }
 .jcarousel ul {
     width: 	  20000em;
@@ -140,11 +152,13 @@ p {
 .jcarousel li {
     /* Required only for block elements like <li>'s */
     float: left;
-    width:890px;
+    /*width:750px;*/
+    width:1296px;
 }
 .jcarousel img {
 	width:100%;
 	height:100%;
+	opacity:0.9;
 }
 .jcarousel p {
 	position: absolute;
@@ -159,8 +173,8 @@ p {
 #learn {
 	left:1510px;
 }
-#mingle {
-	left:2350px;
+#connect {
+	left:2250px;
 }
 .jcarousel img:hover {
 
@@ -196,7 +210,7 @@ p {
 
 
 #about {
-	background-color: #B0CFE3;
+	background-image: url("../images/grey_wash_wall.png");
 	height: 		  450px;
 	/*	*/
 }
@@ -207,6 +221,7 @@ p {
 #about p {
 	text-align: left;
 	font-size: 20px;
+	color:white;
 }
 #about-list {
 	width:20%;
@@ -242,8 +257,8 @@ p {
 
 #exec {
 	/*background-color: #65879C;*/
-	height: 		  500px;
-	border-top: 	  1px solid #65879C;
+	height: 		  530px;
+	/*border-top: 	  1px solid #65879C;*/
 	margin: 		  0 auto;	
 }
 #exec h1 {
@@ -277,9 +292,10 @@ p {
 	padding-left:20px;
 }
 #photos {
-	background-color:#D9E0FF;
+	/*background-color:#D9E0FF;*/
+	background-image: url("../images/polaroid.png");
 	height: 400px;
-	border-top: 1px solid #D9E0FF;
+	/*border-top: 1px solid #D9E0FF;*/
 	margin: 0 auto;	
 }
 
@@ -312,8 +328,8 @@ p {
 }
 
 #calendar {
-	background-color:#BAD0EB;
-	height: 800px;
+	/*background-color:#C7C7C7;*/
+	height: 600px;
 	border-top: 1px solid #D9E0FF;
 	margin: 0 auto;	
 }
@@ -326,8 +342,8 @@ p {
 	text-align: left;
 }
 #calendar iframe {
-	width:80%;
-	height:80%;
+	width:90%;
+	height:70%;
 }
 
 
@@ -349,21 +365,24 @@ p {
 form p {
 	font-size:15px;
 }
+
+/* Footer */
+#footer {
+	height:120px;
+	width:100%;
+	background-image: url("../images/grey_wash_wall.png");
+}
+#footer-desc {
+	float:left;
+	color:lightgrey;
+	display:inline-block;
+}
 #toTop {
 	margin-top:30px;
 	height: 20px;
 	width: 20px;
 	float:right;
-}
-
-/* Footer */
-#footer {
-	height:50px;
-	background-color: grey;
-}
-#footer-desc {
-	float:right;
-	color:lightgrey;
+	display:inline-block;
 }
 /********************* * NAVIGATION * *********************/
 
