--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,8 @@
 				<!--top bar with description and email-->
 				<div id="topbar">
 					<div class="narrower-container">
-						<!-- <div id="desc"><p>description? overly long descripty description</p></div>
-						<div id="email"><p>kusa@duke.edu</p></div> -->
+						<div id="desc"><p>Duke Korean Undergraduate Student Organization</p></div>
+						<div id="email"><p>kusa@duke.edu</p></div>
 					</div>
 				</div>				
 				<!--space for kusa logo-->
