--- a/templates/english.html
+++ b/templates/english.html
@@ -9,15 +9,30 @@
 		    	<ul>
 			        <li>
 			        	<img src="{{ STATIC_URL }}images/photo1.jpg">
-			        	<p id="explore">explore</p>
+			        	<h1 id="explore-title">Explore</h1>
+			        	<div id="explore-desc">
+			        		<p>performances</p><br>
+			        		<p>events</p><br>
+			        		<p>opportunities</p>
+			        	</div>
 			        </li>
 			        <li>
 			        	<img src="{{ STATIC_URL }}images/photo2.jpg">
-			        	<p id="learn">learn</p>
+			        	<h1 id="learn-title">Learn</h1>
+			        	<div id="learn-desc">
+			        		<p>guidance</p><br>
+			        		<p>information</p><br>
+			        		<p>mentorship</p>
+			        	</div>
 			        </li>
 			        <li>
 			        	<img src="{{ STATIC_URL }}images/photo3.jpg">
-			        	<p id="connect">connect</p>
+			        	<h1 id="connect-title">Connect</h1>
+			        	<div id="connect-desc">
+			        		<p>bond</p><br>
+			        		<p>network</p><br>
+			        		<p>socialize</p>
+			        	</div>
 			        </li>
 		        </ul>
 		    </div>
