centered titles, modified layout slightly

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 				<div id="topbar">
 					<div class="narrower-container">
 						<div id="desc"><p>Duke Korean Undergraduate Student Organization</p></div>
-						<div id="email"><p>kusa@duke.edu</p></div>
+						<div id="email"><p>kusa.dukeu@gmail.com</p></div>
 					</div>
 				</div>				
 				<!--space for kusa logo-->
