--- a/KUSAapp/static/css/style.css
+++ b/KUSAapp/static/css/style.css
@@ -11,11 +11,16 @@ body {
 /* Text formatting */
 h1 {
 	font-family: 'Oswald', sans-serif;
-	margin-bottom: 20px;
-	margin-top: 0px;
+	padding-bottom:2px;
+	font-size:50px;
+	display:inline-block;
+}
+h4 {
+	font-size:14px;
 }
 h5 {
-	font-weight: bold;
+	font-weight: bolder;
+	font-size:16px;
 }
 p {
 	font-size:25px;
@@ -45,8 +50,10 @@ p {
 	padding-top:10px;
 }
 .section-content {
-	padding-top:10px;	
+	padding-top:20px;	
+	clear:both;
 }
+
 
 /* Header */
 #header {
@@ -59,7 +66,7 @@ p {
 	background-image: url("../images/grey_wash_wall.png");
 }
 #topbar p {
-	padding-top: 8px;
+	padding-top: 6px;
 	font-size: 18px;
 	color: #B7B7B7;
 }
@@ -162,55 +169,51 @@ p {
 	height:100%;
 	opacity:0.85;
 }
-#explore-title {
+.carousel-title {
 	position: absolute;
-	left:100px;
-	top:60px;
 	font-size: 100px;
 }
-#explore-desc {
+.carousel-desc {
 	position: absolute;
-	left:400px;
-	top:80px;
-	/*width:20%;*/
 }
-#explore-desc p {
+.carousel-desc p { 
 	font-size: 20px;
-	float:left;
-	margin:0;
-	clear:both;
 }
-#learn-title {
-	position: absolute;
-	top:380px;
-	font-size: 100px;
-}
-#learn-desc {
-	position: absolute;
-	top:400px;
-	/*width:20%;*/
-}
-#learn-desc p {
-	font-size: 20px;
-	float:left;
-	margin:0;
-	clear:both;
-}
-#connect-title {
-	position: absolute;
-	top:60px;
-	font-size: 100px;
-}
-#connect-desc {
-	position: absolute;
-	top:80px;
-}
-#connect-desc p {
-	font-size: 20px;
-	float:left;
-	margin:0;
-	clear:both;
-}
+	#explore-title {
+		left:100px;
+		top:60px;
+	}
+	#explore-desc {
+		left:400px;
+		top:95px;
+	}
+	#explore-desc p {
+		float:left;
+		margin:0;
+		clear:both;
+	}
+	#learn-title {
+		top:380px;
+	}
+	#learn-desc {
+		top:415px;
+	}
+	#learn-desc p {
+		float:left;
+		margin:0;
+		clear:both;
+	}
+	#connect-title {
+		top:60px;
+	}
+	#connect-desc {
+		top:95px;
+	}
+	#connect-desc p {
+		float:left;
+		margin:0;
+		clear:both;
+	}
 
 
 #learn {
@@ -254,12 +257,11 @@ p {
 
 #about {
 	background-image: url("../images/grey_wash_wall.png");
-	height: 		  450px;
+	height: 		  510px;
 	/*	*/
 }
 #about h1 {
-	text-align:  left;
-	padding-top: 30px;
+	border-bottom: 3px solid #B4B4B4;
 }
 #about p {
 	text-align: left;
@@ -267,12 +269,15 @@ p {
 	color:white;
 }
 #about-list {
-	width:20%;
+	width:22%;
 	display:inline-block;
 	float:left;
+	border-right: 1px solid #EAEAEA;
+	padding-right:30px;
 }
 #about-content {
-	width:67%;
+	width:74%;
+	padding-left:30px;
 	display:inline-block;
 }
 #about .about-sub-title {
@@ -287,8 +292,14 @@ p {
 #about .about-sub-desc {
 	text-align: left;
 }
-#about a {
-	text-decoration: none;
+#white-rectangle {
+	position:absolute;
+	margin:0 auto;
+	margin-top:60px;
+	clear:both;
+	width:40px;
+	background-color: #EAEAEA;
+	height:5px;
 }
 
 .fancybox-title-over-wrap {
@@ -299,14 +310,11 @@ p {
 
 
 #exec {
-	/*background-color: #65879C;*/
-	height: 		  530px;
-	/*border-top: 	  1px solid #65879C;*/
-	margin: 		  0 auto;	
+	height: 570px;
+	margin: 0 auto;	
 }
 #exec h1 {
-	text-align:  left;
-	padding-top: 30px;
+	border-bottom: 4px solid #B4B4B4;
 }
 #exec p {
 	margin: 0 auto;
@@ -343,8 +351,7 @@ p {
 }
 
 #photos h1 {
-	text-align: left;
-	padding-top: 30px;
+	border-bottom: 4px solid #B4B4B4;
 }
 #photos p {
 	text-align: left;
@@ -372,14 +379,12 @@ p {
 
 #calendar {
 	/*background-color:#C7C7C7;*/
-	height: 600px;
-	border-top: 1px solid #D9E0FF;
+	height: 700px;
 	margin: 0 auto;	
 }
 
 #calendar h1 {
-	text-align: left;
-	padding-top: 30px;
+	border-bottom: 4px solid #B4B4B4;
 }
 #calendar p {
 	text-align: left;
@@ -398,8 +403,7 @@ p {
 }
 
 #contact h1 {
-	text-align: left;
-	padding-top: 30px;
+	border-bottom: 4px solid #B4B4B4;
 }
 #contact p {
 	text-align: left;
