--- a/templates/photos.html
+++ b/templates/photos.html
@@ -10,6 +10,12 @@
 			    		<h4>KSEA GBM/Career Night</h4>
 			    	</div>		    	
 			    </a>
+			    <a class="fancybox" rel="group" href="#horse" title="KSEA GBM/Career Night">
+			    	<div class="photos-sub-title">
+			    		<img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xaf1/t1.0-9/1948111_588263324590863_1194254340_n.jpg" >
+			    		<h4>Year of the Horse</h4>
+			    	</div>		    	
+			    </a>
 			    <a class="fancybox" rel="group" href="#SNL" title="Korea Night - SNL">
 			    	<div class="photos-sub-title">
 			    		<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xfp1/v/t1.0-9/1390719_535952546488608_256787894_n.jpg?oh=e2e97980ac8fedf13434c3b067d95878&oe=545B12F3&__gda__=1416882450_dca330f6acfed00ce4b86ae7380621e9" >
@@ -40,8 +46,21 @@
 			</div>
 		</div>
 		<div style="display:none">
+			<div id="horse">
+				<div class="gallery" id="gallery2">
+					<img src="https://scontent-b-sea.xx.fbcdn.net/hphotos-xpf1/t1.0-9/1800339_588263244590871_1471171126_n.jpg">
+					<img src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xpf1/t1.0-9/1911788_588263271257535_1532979236_n.jpg">
+					<img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xpa1/t1.0-9/1798194_588263157924213_1617561193_n.jpg">
+					<img src="https://scontent-a-sea.xx.fbcdn.net/hphotos-xpa1/t1.0-9/1796519_588263321257530_1497374952_n.jpg">
+					<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xap1/t1.0-9/1660628_588263524590843_1309847779_n.jpg">
+					<img src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xpf1/t1.0-9/1958485_588263527924176_548198389_n.jpg">
+					<img src="https://scontent-a-sea.xx.fbcdn.net/hphotos-xaf1/t1.0-9/1780896_588263737924155_17721672_n.jpg">
+				</div>
+			</div>
+		</div>
+		<div style="display:none">
 			<div id="SNL"> 
-				<div class="gallery" id="gallery2">				
+				<div class="gallery" id="gallery3">				
 					<img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xfp1/v/t1.0-9/1456695_542649682485561_1759024476_n.jpg?oh=d90ae768abd4fd2ed2ff782225640887&oe=546B11EA&__gda__=1416513349_7bbad8df324d92543704e9105771b1ed">
 					<img src="https://scontent-b-sea.xx.fbcdn.net/hphotos-xfp1/t1.0-9/1468794_542649599152236_648908827_n.jpg">
 					<img src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-xap1/t1.0-9/1470315_542649772485552_1378419564_n.jpg">
@@ -61,7 +80,7 @@
 		</div>
 		<div style="display:none">
 			<div id="BBQ">
-				<div class="gallery" id="gallery3">
+				<div class="gallery" id="gallery4">
 					<img src="https://scontent-a-sea.xx.fbcdn.net/hphotos-xap1/t1.0-9/1239661_516208171796379_850692583_n.jpg">
 					<img src="https://scontent-b-sea.xx.fbcdn.net/hphotos-frc3/t1.0-9/1233493_516208175129712_1593840193_n.jpg">
 					<img src="https://scontent-a-sea.xx.fbcdn.net/hphotos-xpa1/t1.0-9/563585_516208168463046_1545374843_n.jpg">
