polish up layout

--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,9 @@
 					<div id="footer-desc">
 						Copyright Duke Korean Undergraduate Student Association 2014
 					</div>
-					<div id="toTop"><button>top</button></div>
+					<div id="toTop">
+						<a href="#"><strong>top</strong>^</a>
+					</div>
 				</div>
 			</div>
 		</div>
