--- a/templates/english.html
+++ b/templates/english.html
@@ -78,7 +78,7 @@
 		<div class="narrower-container">
 			<h1>Contact</h1>
 			<div class="section-content">
-				<p>Questions or Comments? Feel free to send us a message by filling out the form below. You can also <a href="mailto:kusa.dukeu@gmail.com">mail us directly</a> or follow us on <a href="https://www.facebook.com/DukeKUSA">Facebook!</a></p>
+				<p>Questions or Comments? Feel free to send us a message by filling out the form below. You can also <a href="mailto:kusa.dukeu@gmail.com">mail us directly</a> or follow us on <a href="https://www.facebook.com/DukeKUSA">Facebook.</a></p>
 			    {% if errors %}
 			        <ul>
 			            {% for error in errors %}
