--- a/KUSAapp/static/css/style.css
+++ b/KUSAapp/static/css/style.css
@@ -424,19 +424,26 @@ p {
 	height:120px;
 	width:100%;
 	background-image: url("../images/grey_wash_wall.png");
+	font-size:16px;
 }
 #footer-desc {
 	float:left;
 	color:lightgrey;
+	margin-top:10px;
 	display:inline-block;
 }
 #toTop {
-	margin-top:30px;
-	height: 20px;
-	width: 20px;
+	/*height: 20px;
+	width: 20px;*/
+	margin-top:10px;
 	float:right;
 	display:inline-block;
+	font-size:20px;
 }
+#toTop a {
+	text-decoration: none;
+}
+
 /********************* * NAVIGATION * *********************/
 
 /* I put navigation separate to the layout as there can be a number of navigation points under their sub-headings */
