--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
 			<div id="footer">
 				<div class="narrower-container">
 					<div id="footer-desc">
-						Copyright Duke Korean Undergraduate Student Association 2014
+						Copyright &copy 2014 Duke Korean Undergraduate Student Association. All Rights Reserved.
 					</div>
 					<div id="toTop">
 						<a href="#"><strong>top</strong>^</a>
