added newrelic ping/monitoring; trying email with sendgrid

--- a/templates/english.html
+++ b/templates/english.html
@@ -87,7 +87,7 @@
 			        </ul>
 			    {% endif %}
 				  
-			    <form action="/contact/" method="post">{% csrf_token %}
+			    <form action="contact/" method="post">{% csrf_token %}
 			    	<table>
 			    		<tr>
 			    			<td>Subject:</td>
