--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,10 @@
 {% block about %}
 <div id="about">
 	<div class="section-container">
-		<div class="narrower-container">		
-		    <h1> About Us </h1>
+		<div class="narrower-container">
+			<div class="section-title">		
+		    	<h1> About Us </h1>
+		    </div>
 		    <div class="section-content">
 			    <div id="about-list">
 				    <ul class="nav nav-pills nav-stacked" id="about-tab" role="tablist">
