--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,8 @@
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.fancybox.pack.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}galleria/galleria-1.2.9.min.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}galleria/themes/classic/galleria.classic.min.js"></script>
+        <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="{{ STATIC_URL }}images/" type="image/x-icon">
 	</head>
 
 	<body>
