--- a/templates/english.html
+++ b/templates/english.html
@@ -63,7 +63,9 @@
 <div id="calendar">
 	<div class="section-container">
 		<div class="narrower-container">
-			<h1> Calendar </h1>
+			<div class="section-title">
+				<h1> Calendar </h1>
+			</div>
 			<div class="section-content">
 				<iframe src="https://www.google.com/calendar/embed?title=KUSA%20Events&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=kusa.dukeu%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FNew_York" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
 			</div>
@@ -76,7 +78,9 @@
 <div id="contact">
 	<div class="section-container">
 		<div class="narrower-container">
-			<h1>Contact</h1>
+			<div class="section-title">
+				<h1>Contact</h1>
+			</div>
 			<div class="section-content">
 				<p>Questions or Comments? Feel free to send us a message by filling out the form below. You can also <a href="mailto:kusa.dukeu@gmail.com">mail us directly</a> or follow us on <a href="https://www.facebook.com/DukeKUSA">Facebook.</a></p>
 			    {% if errors %}
@@ -91,18 +95,21 @@
 			    	<table>
 			    		<tr>
 			    			<td>Subject:</td>
-			    			<td><input type="text" name="subject"></td>
+			    			<td><input type="text" name="subject" id="form-subject"></td>
 			    		</tr>
 			    		<tr>
 			    			<td>Your e-mail:</td>
-			    			<td><input type="text" name="email"></td>
+			    			<td><input type="text" name="email" id="form-email"></td>
 			    		</tr>
 					    <tr>
 					    	<td>Message:</td>
-					    	<td><textarea name="message" rows="10" cols="50"></textarea></td>					        
+					    	<td><textarea name="message" rows="12" cols="60" id="form-message"></textarea></td>					        
+					    </tr>
+					    <tr>
+					    	<td></td>
+					    	<td><input type="submit" value="Submit" id="form-submit"></td>
 					    </tr>
 			        </table>
-			        <input type="submit" value="Submit" id="form-submit">
 			    </form>
 			</div>
 		</div>
