--- a/templates/exec.html
+++ b/templates/exec.html
@@ -2,7 +2,9 @@
 <div id="exec">
 	<div class="section-container">
 		<div class="narrower-container">
-		    <h1> Exec Members </h1>
+			<div class="section-title">
+		    	<h1> Exec Members </h1>
+		    </div>
 		    <!-- Nav tabs -->
 		    <div class="section-content">
 				<ul class="nav nav-tabs" id="exec-tab" role="tablist">
