--- a/templates/photos.html
+++ b/templates/photos.html
@@ -2,32 +2,48 @@
 <div id="photos">
 	<div class="section-container">
 		<div class="narrower-container">
-		    <h1> Photos </h1>
+			<div class="section-title">
+				<h1> Photos </h1>
+			</div>
 		    <div class="section-content">
-		    	<a class="fancybox" rel="group" href="#Career" title="KSEA GBM/Career Night">
-			    	<div class="photos-sub-title">
-			    		<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/1972407_608903995860129_2014024571_n.jpg?oh=c9aaf920e35297dbd0cbe030e7896671&oe=545BD550&__gda__=1417228931_95ec9f6b762e6151ce903d344a02dfc2" >
-			    		<h4>KSEA GBM/Career Night</h4>
-			    	</div>		    	
-			    </a>
-			    <a class="fancybox" rel="group" href="#horse" title="KSEA GBM/Career Night">
-			    	<div class="photos-sub-title">
-			    		<img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xaf1/t1.0-9/1948111_588263324590863_1194254340_n.jpg" >
-			    		<h4>Year of the Horse</h4>
-			    	</div>		    	
-			    </a>
-			    <a class="fancybox" rel="group" href="#SNL" title="Korea Night - SNL">
-			    	<div class="photos-sub-title">
-			    		<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xfp1/v/t1.0-9/1390719_535952546488608_256787894_n.jpg?oh=e2e97980ac8fedf13434c3b067d95878&oe=545B12F3&__gda__=1416882450_dca330f6acfed00ce4b86ae7380621e9" >
-			    		<h4>Korea Night - SNL</h4>
-			    	</div>		    	
-			    </a>
-			    <a class="fancybox" rel="group" href="#BBQ" title="Chuseok Festival BBQ">
-			    	<div class="photos-sub-title">
-			    		<img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/p417x417/1238923_516209258462937_367274963_n.jpg?oh=b8d27a5f1cc3a69449564e4469ee2182&oe=546CF751&__gda__=1417417149_50a2c11b99e12d9979f873ae58c91e2e" >
-			    		<h4>Chuseok Festival BBQ</h4>
-			    	</div>		    	
-			    </a>
+		    	<table class="photo-table">
+		    		<!-- row 1 -->
+		    		<tr>
+		    			<td>
+		    				<a class="fancybox" rel="group" href="#Career">
+						    	<div class="title-img">
+						    		<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/1972407_608903995860129_2014024571_n.jpg?oh=c9aaf920e35297dbd0cbe030e7896671&oe=545BD550&__gda__=1417228931_95ec9f6b762e6151ce903d344a02dfc2" >
+						    	</div>
+					    		<h4>KSEA GBM/Career Night</h4>
+						    </a>						    
+		    			</td>
+		    			<td>
+		    				<a class="fancybox" rel="group" href="#horse">
+						    	<div class="title-img">
+						    		<img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xaf1/t1.0-9/1948111_588263324590863_1194254340_n.jpg" >
+						    	</div>
+					    		<h4>Year of the Horse</h4>
+						    </a>
+		    			</td>
+		    			<td>
+		    				<a class="fancybox" rel="group" href="#SNL">
+						    	<div class="title-img">
+						    		<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xfp1/v/t1.0-9/1390719_535952546488608_256787894_n.jpg?oh=e2e97980ac8fedf13434c3b067d95878&oe=545B12F3&__gda__=1416882450_dca330f6acfed00ce4b86ae7380621e9" >
+						    	</div>		    	
+					    		<h4>Korea Night - SNL</h4>
+						    </a>
+		    			</td>
+		    			<td>
+		    				<a class="fancybox" rel="group" href="#BBQ">
+						    	<div class="title-img">
+						    		<img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/p417x417/1238923_516209258462937_367274963_n.jpg?oh=b8d27a5f1cc3a69449564e4469ee2182&oe=546CF751&__gda__=1417417149_50a2c11b99e12d9979f873ae58c91e2e" >
+						    		<h4>Chuseok Festival BBQ</h4>
+						    	</div>
+						    </a>
+		    			</td>
+		    		</tr>
+		    		<!-- row 2 -->
+		    	</table>
 			</div>
 		</div>
 		<div style="display:none">
