--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
         <script type="text/javascript" src="{{ STATIC_URL }}galleria/themes/classic/galleria.classic.min.js"></script>
         <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="{{ STATIC_URL }}images/" type="image/x-icon">
+		<meta name="description" content="The Korean Undergraduate Students Association (KUSA) exists to provide a sense of community for undergraduate students at Duke University who share a common interest in Korean culture.">
+		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	</head>
 
 	<body>
