optimizing website by scaling images; added listserv link

--- a/templates/english.html
+++ b/templates/english.html
@@ -82,7 +82,7 @@
 				<h1>Contact</h1>
 			</div>
 			<div class="section-content">
-				<p>Questions or Comments? Feel free to send us a message by filling out the form below. You can also <a href="mailto:kusa.dukeu@gmail.com">mail us directly</a> or follow us on <a href="https://www.facebook.com/DukeKUSA">Facebook.</a></p>
+				<p>Questions or Comments? Feel free to send us a message by filling out the form below or mailing us directly at <a href="mailto:kusa.dukeu@gmail.com">kusa.dukeu@gmail.com</a>. You can also sign up for our <a href="https://docs.google.com/forms/d/1YCBcHm1zeJMOeasZWIATjGjWNZA_Dddd2cPKkGmGxSI/viewform" target="_blank">listserv</a> or follow us on <a href="https://www.facebook.com/DukeKUSA" target="_blank">Facebook</a> for more information!</p> 
 			    {% if errors %}
 			        <ul>
 			            {% for error in errors %}
