--- a/templates/photos.html
+++ b/templates/photos.html
@@ -20,7 +20,7 @@
 		    			<td>
 		    				<a class="fancybox" rel="group" href="#horse">
 						    	<div class="title-img">
-						    		<img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-xaf1/t1.0-9/1948111_588263324590863_1194254340_n.jpg" >
+						    		<img src="{{ STATIC_URL }}images/year_horse.jpg" >
 						    	</div>
 					    		<h4>Year of the Horse</h4>
 						    </a>
