--- a/templates/about.html
+++ b/templates/about.html
@@ -17,7 +17,7 @@
 				<div class="tab-content" id="about-content">
 					<div class="tab-pane fade in active" id="mission">
 						<p>
-							Founded in 2002, the Korean Undergraduate Students Association (KUSA) exists to provide a sense of community for undergraduate students at Duke University who share a common interest in Korean culture. KUSA is dedicated to promoting the cultural, social, and political interests of the Korean community on campus through a variety of events. Furthermore, we seek to serve as a vehicle for encouraging friendship and mentorship by organizing social activities throughout the year.
+							Founded in 2002, the Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Duke University who share a common interest in Korean culture. KUSA is dedicated to promoting the cultural, social, and political interests of the Korean community on campus through a variety of events. Furthermore, we seek to serve as a vehicle for encouraging friendship and mentorship by organizing social activities throughout the year.
 						</p>
 					</div>
 					<div class="tab-pane fade" id="cultural">
