changing image associated with link to website

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:fb="http://ogp.me/ns/fb#">
 	<head>
 		<title>Duke KUSA</title>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -16,6 +17,7 @@
 		<link rel="icon" href="{{ STATIC_URL }}images/" type="image/x-icon">
 		<meta name="description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Duke University who share a common interest in Korean culture.">
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+		<meta property="og:image" content="{{ STATIC_URL }}images/KUSA_logo.jpg" />
 	</head>
 
 	<body>
