--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,4 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:fb="http://ogp.me/ns/fb#">
+<html>
 	<head>
 		<title>Duke KUSA</title>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -15,9 +14,9 @@
         <script type="text/javascript" src="{{ STATIC_URL }}galleria/galleria-1.2.9.min.js"></script>
         <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="{{ STATIC_URL }}images/" type="image/x-icon">
+		<link rel="image_src" href="{{ STATIC_URL }}images/KUSA_logo.jpg" />
 		<meta name="description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Duke University who share a common interest in Korean culture.">
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-		<meta property="og:image" content="{{ STATIC_URL }}images/KUSA_logo.jpg" />
 	</head>
 
 	<body>
