fixing link images

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
         <script type="text/javascript" src="{{ STATIC_URL }}galleria/galleria-1.2.9.min.js"></script>
         <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="{{ STATIC_URL }}images/" type="image/x-icon">
-		<link rel="image_src" href="{{ STATIC_URL }}images/KUSA_logo.jpg" />
+		<link rel="image_src" href="{{ STATIC_URL }}images/KUSA_logo_big.jpg" />
 		<meta name="description" content="The Korean Undergraduate Student Association (KUSA) exists to provide a sense of community for undergraduate students at Duke University who share a common interest in Korean culture.">
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	</head>
