changed carousel image quality

--- a/KUSAapp/static/css/style.css
+++ b/KUSAapp/static/css/style.css
@@ -170,7 +170,7 @@ p {
 .jcarousel img {
 	width:100%;
 	height:100%;
-	opacity:0.85;
+	/*opacity:0.85;*/
 }
 .carousel-title {
 	position: absolute;
