--- a/templates/english.html
+++ b/templates/english.html
@@ -8,7 +8,7 @@
 		    <div class="jcarousel">
 		    	<ul>
 			        <li>
-			        	<img src="{{ STATIC_URL }}images/photo1.jpg">
+			        	<img src="{{ STATIC_URL }}images/photo1_new.jpg">
 			        	<h1 class="carousel-title" id="explore-title">Explore</h1>
 			        	<div class="carousel-desc" id="explore-desc">
 			        		<p>performances</p><br>
@@ -17,7 +17,7 @@
 			        	</div>
 			        </li>
 			        <li>
-			        	<img src="{{ STATIC_URL }}images/photo2.jpg">
+			        	<img src="{{ STATIC_URL }}images/photo2_new.jpg">
 			        	<h1 class="carousel-title" id="learn-title">Learn</h1>
 			        	<div class="carousel-desc" id="learn-desc">
 			        		<p>guidance</p><br>
@@ -26,7 +26,7 @@
 			        	</div>
 			        </li>
 			        <li>
-			        	<img src="{{ STATIC_URL }}images/photo3.jpg">
+			        	<img src="{{ STATIC_URL }}images/photo3_new.jpg">
 			        	<h1 class="carousel-title" id="connect-title">Connect</h1>
 			        	<div class="carousel-desc" id="connect-desc">
 			        		<p>bond</p><br>
@@ -43,7 +43,7 @@
 	    <!-- <div id="pagination">
 	    	<div class="jcarousel-pagination"></div>
 	    </div> -->
-	</div>
+		</div>
 </div>
 {% endblock %}
 
