compressed exec images

--- a/templates/english.html
+++ b/templates/english.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block carousel %}
-<div id="carousel" data-stellar-background-ratio="1" data-stellar-horizontal-offset="1000">
+<div id="carousel">
 	<!-- <div class="narrower-container"> -->
 		<div id="carousel-and-nav">
 			<!-- <a class="jcarousel-prev" href="#"><img class="arrow" src="{{ STATIC_URL }}images/left_arrow.png"></a> -->
